@@ -132,7 +132,8 @@ default behavior.
 Do not check build dependencies and conflicts.
 .TP
 .B \-nc
-Do not clean the source tree (implies \fB\-b\fP).
+Do not clean the source tree (implies \fB\-b\fP if nothing else has been
+selected among \fB-B\fP, \fB-A\fP or \fB-S\fP).
 .TP
 .B \-tc
 Clean the source tree (using
