@@ -79,6 +79,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     time. Closes: #525835
   * Let dpkg-buildpackage add the missing execute right on debian/rules if
     needed. Display a warning when it happens. Closes: #499088
+  * Allow to combine -nc and -S in dpkg-buildpackage but display a warning
+    saying that it's not advised. Closes: #304404
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
